Make use of XDG.
svn path=/trunk/kdesdk/kcachegrind/; revision=246599

--- a/kcachegrind/Makefile.am
+++ b/kcachegrind/Makefile.am
@@ -23,8 +23,7 @@ kcachegrind_LDADD   =  $(LIB_KFILE) $(LIB_KDEUI) $(LIB_QT) $(LIBSOCKET)
 
 KDE_ICON = AUTO
 
-appdirdevelopmentdir = $(kde_appsdir)/Development
-appdirdevelopment_DATA = kcachegrind.desktop
+xdg_apps_DATA = kcachegrind.desktop
 
 mimeapplicationdir = $(kde_mimedir)/application
 mimeapplication_DATA = x-kcachegrind.desktop
