--- a/Makefile.am
+++ b/Makefile.am
@@ -2,5 +2,5 @@ SUBDIRS = kcachegrind pics
 
 EXTRA_DIST = \
 	AUTHORS COPYING NEWS ChangeLog INSTALL README TODO \
-	kcachegrind.lsm kcachegrind.spec 
+	kcachegrind.lsm kcachegrind.spec version.h 
 
