I know it's suprising, but the framework greps for dnl AC_OUTPUT
svn path=/trunk/kdesdk/kcachegrind/; revision=247134

--- a/configure.in.in
+++ b/configure.in.in
@@ -5,7 +5,7 @@ AC_SUBST(KCACHEGRIND_PACKAGE)
 
 AC_FUNC_MMAP
 
-AC_OUTPUT( kcachegrind/version.h )
-AC_OUTPUT( kcachegrind/kcachegrind.spec )
-AC_OUTPUT( kcachegrind/kcachegrind.lsm )
+dnl AC_OUTPUT( kcachegrind/version.h )
+dnl AC_OUTPUT( kcachegrind/kcachegrind.spec )
+dnl AC_OUTPUT( kcachegrind/kcachegrind.lsm )
 
