Defining KCACHEGRIND_PACKAGE is nonsense (will never change)
svn path=/trunk/kdesdk/kcachegrind/; revision=247303

--- a/kcachegrind.lsm.in
+++ b/kcachegrind.lsm.in
@@ -1,5 +1,5 @@
 Begin3
-Title:          @KCACHEGRIND_PACKAGE@
+Title:          kcachegrind
 Version:        @KCACHEGRIND_VERSION@
 Description:    KDE Profiling Visualisation Tool
 Keywords:       Profiling, Performance Analysis, Visualisation, Development
