--- a/kcachegrind.spec.in
+++ b/kcachegrind.spec.in
@@ -1,5 +1,5 @@
 Summary:   KDE Profiling Visualisation Tool
-Name:      @KCACHEGRIND_PACKAGE@
+Name:      kcachegrind
 Version:   @KCACHEGRIND_VERSION@
 Release:   1
 Copyright: GPL
@@ -7,7 +7,7 @@ Group:     Development/Tools
 Vendor:    (none)
 URL:       http://kcachegrind.sourceforge.net
 Packager:  Josef Weidendorfer <Josef.Weidendorfer@gmx.de>
-Source:    @KCACHEGRIND_PACKAGE@-@KCACHEGRIND_VERSION@.tar.gz
+Source:    kcachegrind-@KCACHEGRIND_VERSION@.tar.gz
 BuildRoot: /var/tmp/build
 
 %description
@@ -42,14 +42,14 @@ make -j$numprocs
 make install-strip DESTDIR=$RPM_BUILD_ROOT
 
 cd $RPM_BUILD_ROOT
-find . -type d | sed '1,2d;s,^\.,\%attr(-\,root\,root) \%dir ,' > $RPM_BUILD_DIR/file.list.@KCACHEGRIND_PACKAGE@
-find . -type f | sed 's,^\.,\%attr(-\,root\,root) ,' >> $RPM_BUILD_DIR/file.list.@KCACHEGRIND_PACKAGE@
-find . -type l | sed 's,^\.,\%attr(-\,root\,root) ,' >> $RPM_BUILD_DIR/file.list.@KCACHEGRIND_PACKAGE@
+find . -type d | sed '1,2d;s,^\.,\%attr(-\,root\,root) \%dir ,' > $RPM_BUILD_DIR/file.list.kcachegrind
+find . -type f | sed 's,^\.,\%attr(-\,root\,root) ,' >> $RPM_BUILD_DIR/file.list.kcachegrind
+find . -type l | sed 's,^\.,\%attr(-\,root\,root) ,' >> $RPM_BUILD_DIR/file.list.kcachegrind
 
 %clean
 rm -rf $RPM_BUILD_ROOT/*
-rm -rf $RPM_BUILD_DIR/@KCACHEGRIND_PACKAGE@
-rm -rf ../file.list.@KCACHEGRIND_PACKAGE@
+rm -rf $RPM_BUILD_DIR/kcachegrind
+rm -rf ../file.list.kcachegrind
 
 
-%files -f ../file.list.@KCACHEGRIND_PACKAGE@
+%files -f ../file.list.kcachegrind
