Recognize files starting with "callgrind.out" as profile data, too. This prepares renaming of calltree into callgrind.
svn path=/trunk/kdesdk/kcachegrind/; revision=247542

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -7,10 +7,9 @@ MimeType=application/x-kcachegrind;
 Icon=kcachegrind
 DocPath=kcachegrind/index.html
 Comment=
-Comment[de]=
+Comment[xx]=xxxx
 Terminal=0
 Name=KCachegrind
-Comment=Frontend for Cachegrind
+Comment=Visualization of Performance Profiling Data
 X-DCOP-ServiceType=Multi
-Name[de]=KCachegrind
 Categories=Qt;KDE;Development
