--- a/kcachegrind/x-kcachegrind.desktop
+++ b/kcachegrind/x-kcachegrind.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Encoding=UTF-8
-Comment=Cachegrind Profile Trace
+Comment=Cachegrind/Callgrind Profile Dump
 DefaultApp=kcachegrind
 Icon=kcachegrind
 Type=MimeType
 MimeType=application/x-kcachegrind
-Patterns=cachegrind.out*
+Patterns=cachegrind.out*;callgrind.out*
