--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -7,9 +7,30 @@ MimeType=application/x-kcachegrind;
 Icon=kcachegrind
 DocPath=kcachegrind/index.html
 Comment=
+Comment[fr]=ire=
 Comment[xx]=xxxx
 Terminal=0
 Name=KCachegrind
+Name[sv]=Kcachegrind
+Name[xx]=xxKCachegrindxx
+GenericName=Profiler Frontend
 Comment=Visualization of Performance Profiling Data
+Comment[ca]=Visualizació del processament de perfilat de dades
+Comment[cs]=Vizualizace profilovacích dat výkonu
+Comment[da]=Visualisering af ydelse-profildata
+Comment[de]=Visualisierung von Daten des Laufzeitverhaltens eines Programmes
+Comment[en_GB]=Visualisation of Performance Profiling Data
+Comment[et]=Jõudluse profileerimise andmete visualiseerimise vahend
+Comment[fr]=Visualisation des données de performance de profilage
+Comment[hu]=Teljesítményprofil-adatok megjelenítése
+Comment[it]=Visualizzazione delle prestazioni per il profiling dei dati
+Comment[nl]=Visualisatie van Performance Profiling Data
+Comment[pt]=Visualização dos Dados de Análise de Performance
+Comment[pt_BR]=Visualização de Dados de Perfil de Desempenho
+Comment[ru]=Утилита для визуального профилирования приложений
+Comment[sk]=Vizualizácia dát o výkone
+Comment[sr]=Визуелизација података о профилисању перформанси
+Comment[sv]=Åskådliggörande av profileringsdata för prestanda
+Comment[xx]=xxVisualization of Performance Profiling Dataxx
 X-DCOP-ServiceType=Multi
 Categories=Qt;KDE;Development
