--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -7,21 +7,46 @@ MimeType=application/x-kcachegrind;
 Icon=kcachegrind
 DocPath=kcachegrind/index.html
 Comment=
-Comment[fr]=ire=
+Comment[ta]=  
 Comment[xx]=xxxx
 Terminal=0
 Name=KCachegrind
+Name[hi]=के-केश-ग्रिंड
 Name[sv]=Kcachegrind
+Name[ta]=  இடைமாற்றகட்டம்
 Name[xx]=xxKCachegrindxx
 GenericName=Profiler Frontend
+GenericName[cs]=Rozhraní pro profilaci
+GenericName[cy]=Blaen-wyneb Proffilydd
+GenericName[da]=Forende for profiler
+GenericName[de]=Profiler Oberfläche
+GenericName[es]=Interfaz de Profiler
+GenericName[et]=Profileerimisrakendus
+GenericName[fi]=Profiloijan käyttöliittymä
+GenericName[fr]=Interface de profilage
+GenericName[hi]=प्रोफाइलर फ्रन्टएण्ड
+GenericName[hu]=Profilozó
+GenericName[it]=Interfaccia grafica al Profiler
+GenericName[nl]=Profiler-hulpprogramma
+GenericName[pt]=Interface de Profiler
+GenericName[pt_BR]=Interface para o Profiler
+GenericName[ru]=Интерфейс к профилировщику
+GenericName[sk]=Rozhranie pre profiler
+GenericName[sl]=Vmesnik profilnika
+GenericName[sr]=Графички интерфејс за профајлер
+GenericName[sv]=Profileringsgränssnitt
+GenericName[ta]= விவரக்குறிப்பு  முன்பகுதி
 Comment=Visualization of Performance Profiling Data
 Comment[ca]=Visualizació del processament de perfilat de dades
 Comment[cs]=Vizualizace profilovacích dat výkonu
 Comment[da]=Visualisering af ydelse-profildata
 Comment[de]=Visualisierung von Daten des Laufzeitverhaltens eines Programmes
 Comment[en_GB]=Visualisation of Performance Profiling Data
+Comment[es]=Visualización de datos de análisis de rendimiento
 Comment[et]=Jõudluse profileerimise andmete visualiseerimise vahend
+Comment[fi]=Visualisointi tehoprofiloinnin tiedoista
 Comment[fr]=Visualisation des données de performance de profilage
+Comment[hi]=परफार्मेस प्रोफाइलिंग डाटा का विजुअलाइज़ेशन
 Comment[hu]=Teljesítményprofil-adatok megjelenítése
 Comment[it]=Visualizzazione delle prestazioni per il profiling dei dati
 Comment[nl]=Visualisatie van Performance Profiling Data
@@ -29,8 +54,10 @@ Comment[pt]=Visualização dos Dados de Análise de Performance
 Comment[pt_BR]=Visualização de Dados de Perfil de Desempenho
 Comment[ru]=Утилита для визуального профилирования приложений
 Comment[sk]=Vizualizácia dát o výkone
+Comment[sl]=Vizualizacija podatkov profilnih zmogljivosti
 Comment[sr]=Визуелизација података о профилисању перформанси
 Comment[sv]=Åskådliggörande av profileringsdata för prestanda
+Comment[ta]= விவர தகவலை செயல்பாட்டு காட்சியாளிப்பு
 Comment[xx]=xxVisualization of Performance Profiling Dataxx
 X-DCOP-ServiceType=Multi
 Categories=Qt;KDE;Development
