CVS_SILENT made messages
svn path=/branches/KDE_3_2_BRANCH/kdesdk/kcachegrind/; revision=292553

--- a/kcachegrind/x-kcachegrind.desktop
+++ b/kcachegrind/x-kcachegrind.desktop
@@ -12,7 +12,9 @@ Comment[fi]=Cachegrind/Callgrind profiililista
 Comment[fr]=Dépôt de profil Cachegrind / Callgrind
 Comment[hi]=केश-ग्रिंड/काल-ग्रिंड प्रोफाइल डम्प
 Comment[hu]=Cachegrind/Callgrind teljesítményprofil-fájl
+Comment[is]=Niðurstaða afkastakönnunar á Cachegrind/Callgrind
 Comment[it]=Dump del profilo di Cachegrind/Callgrind
+Comment[ja]=Callgrind/Callgrind プロファイルダンプ
 Comment[nl]=Cachegrind/Callgrind Profieldump
 Comment[pl]=Zrzut profilowania Cachegrind/Callgrind
 Comment[pt]=Resultado da Análise do Cachegrind/Callgrind
@@ -20,6 +22,7 @@ Comment[pt_BR]=Depósito de Perfil Cachegrind/Callgrind
 Comment[ru]=Дамп профилирования Cachegrind/Callgrind
 Comment[sk]=Výpis volaní Cachegrind/Callgrind
 Comment[sr]=Cachegrind-ов/Callgrind-ов стовар профила
+Comment[sr@Latn]=Cachegrind-ov/Callgrind-ov stovar profila
 Comment[sv]=Profileringsdump från Cachegrind/Callgrind
 Comment[ta]=இடைமாற்றகட்டம்/ அழைப்பு கட்டம்  விவரக்குறி திணிப்பு 
 Comment[xx]=xxCachegrind/Callgrind Profile Dumpxx
