CVS_SILENT made messages
svn path=/branches/KDE_3_2_BRANCH/kdesdk/kcachegrind/; revision=306155

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -26,11 +26,12 @@ GenericName[es]=Interfaz de Profiler
 GenericName[et]=Profileerimisrakendus
 GenericName[fi]=Profiloijan käyttöliittymä
 GenericName[fr]=Interface de profilage
-GenericName[hi]=प्रोफाइलर फ्रन्टएण्ड
+GenericName[hi]=प्रोफ़ाइलर फ्रन्टएण्ड
 GenericName[hu]=Profilozó
 GenericName[is]=Myndrænt viðmót á afkastakönnuð
 GenericName[it]=Interfaccia grafica al Profiler
 GenericName[ja]=プロファイラフロントエンド
+GenericName[nb]=Grensesnitt for fremvisningen
 GenericName[nl]=Profiler-hulpprogramma
 GenericName[pl]=Interfejs do profilera
 GenericName[pt]=Interface de Profiler
@@ -59,6 +60,7 @@ Comment[hu]=Teljesítményprofil-adatok megjelenítése
 Comment[is]=Sjónræn framsetning gagna úr afkastakönnun
 Comment[it]=Visualizzazione delle prestazioni per il profiling dei dati
 Comment[ja]=パフォーマンスプロファイルデータを視覚化
+Comment[nb]=Vis informasjon om ytelse.
 Comment[nl]=Visualisatie van Performance Profiling Data
 Comment[pl]=Wizualizacja danych profilowania wydajności
 Comment[pt]=Visualização dos Dados de Análise de Performance
