--- a/kcachegrind/x-kcachegrind.desktop
+++ b/kcachegrind/x-kcachegrind.desktop
@@ -10,7 +10,7 @@ Comment[es]=Resultado de análisis de Cachegrind/Callgring
 Comment[et]=Cachegrind/Callgrind profileerimistõmmis
 Comment[fi]=Cachegrind/Callgrind profiililista
 Comment[fr]=Dépôt de profil Cachegrind / Callgrind
-Comment[hi]=केश-ग्रिंड/काल-ग्रिंड प्रोफाइल डम्प
+Comment[hi]=केश-ग्रिंड/काल-ग्रिंड प्रोफ़ाइल डम्प
 Comment[hu]=Cachegrind/Callgrind teljesítményprofil-fájl
 Comment[is]=Niðurstaða afkastakönnunar á Cachegrind/Callgrind
 Comment[it]=Dump del profilo di Cachegrind/Callgrind
