--- a/kcachegrind/x-kcachegrind.desktop
+++ b/kcachegrind/x-kcachegrind.desktop
@@ -25,6 +25,7 @@ Comment[sr]=Cachegrind-ов/Callgrind-ов стовар профила
 Comment[sr@Latn]=Cachegrind-ov/Callgrind-ov stovar profila
 Comment[sv]=Profileringsdump från Cachegrind/Callgrind
 Comment[ta]=இடைமாற்றகட்டம்/ அழைப்பு கட்டம் விவரக்குறி திணிப்பு
+Comment[tg]=Дампи профилкунии Cachegrind/Callgrind
 Comment[xx]=xxCachegrind/Callgrind Profile Dumpxx
 Comment[zh_CN]=Cachegrind/Callgrind 配置文件转存
 DefaultApp=kcachegrind
