Move SubCost out of tracedata.h/cpp. Start of flexible SubCost allocator (get rid of fixed number of event types KCachegrind can load).
svn path=/trunk/kdesdk/kcachegrind/; revision=370393

--- a/kcachegrind/Makefile.am
+++ b/kcachegrind/Makefile.am
@@ -9,7 +9,7 @@ kcachegrind_SOURCES = \
  kwidgetaction.cpp main.cpp configuration.cpp \
  functionselection.cpp coverage.cpp partgraph.cpp \
  toplevel.cpp stackselection.cpp stackbrowser.cpp \
- tracedata.cpp partselection.cpp configdlg.cpp \
+ subcost.cpp tracedata.cpp partselection.cpp configdlg.cpp \
  utils.cpp fixcost.cpp \
  traceitemview.cpp instrview.cpp tabview.cpp \
  sourceview.cpp callmapview.cpp callview.cpp \
