Put the memory allocators into separate files (pool.h/cpp), adding a allocator for small resizable objects (DynPool). To be used to allow for arbitrary number of event types.
svn path=/trunk/kdesdk/kcachegrind/; revision=376271

--- a/kcachegrind/Makefile.am
+++ b/kcachegrind/Makefile.am
@@ -5,7 +5,7 @@ kcachegrind_SOURCES = \
  stackselectionbase.ui \
  partselectionbase.ui \
  configdlgbase.ui \
- loader.cpp cachegrindloader.cpp treemap.cpp \
+ loader.cpp cachegrindloader.cpp treemap.cpp pool.cpp \
  kwidgetaction.cpp main.cpp configuration.cpp \
  functionselection.cpp coverage.cpp partgraph.cpp \
  toplevel.cpp stackselection.cpp stackbrowser.cpp \
