CVS_SILENT made messages (.desktop file)
svn path=/trunk/kdesdk/kcachegrind/; revision=384848

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -41,6 +41,7 @@ GenericName[sr@Latn]=Grafički interfejs za profajler
 GenericName[sv]=Profileringsgränssnitt
 GenericName[ta]= விவரக்குறிப்பு முன்பகுதி
 GenericName[tg]=Интерфейс ба профилкунанда
+GenericName[uk]=Інтерфейс до Profiler
 GenericName[xx]=xxProfiler Frontendxx
 GenericName[zh_CN]=个性数据前端
 Comment=Visualization of Performance Profiling Data
@@ -52,6 +53,7 @@ Comment[de]=Visualisierung von Daten des Laufzeitverhaltens eines Programmes
 Comment[en_GB]=Visualisation of Performance Profiling Data
 Comment[es]=Visualización de datos de análisis de rendimiento
 Comment[et]=Jõudluse profileerimise andmete visualiseerimise vahend
+Comment[eu]=Errendimendu profil datuen bistaratzea
 Comment[fi]=Visualisointi tehoprofiloinnin tiedoista
 Comment[fr]=Visualisation des données de performance de profilage
 Comment[hi]=परफार्मेस प्रोफाइलिंग डाटा का विजुअलाइज़ेशन
@@ -72,6 +74,7 @@ Comment[sr@Latn]=Vizuelizacija podataka o profilisanju performansi
 Comment[sv]=Åskådliggörande av profileringsdata för prestanda
 Comment[ta]= விவர தகவலை செயல்பாட்டு காட்சியாளிப்பு
 Comment[tg]=Утилита барои гузориши профили визуалӣ
+Comment[uk]=Візуалізація даних профілювання швидкодії
 Comment[xx]=xxVisualization of Performance Profiling Dataxx
 Comment[zh_CN]=性能个性数据的可视化表现
 X-DCOP-ServiceType=Multi
