--- a/kcachegrind/x-kcachegrind.desktop
+++ b/kcachegrind/x-kcachegrind.desktop
@@ -8,6 +8,7 @@ Comment[da]=Cachegrind/Callgrind profile-dump
 Comment[de]=Cachegrind/Callgrind Profil-Ausgabe
 Comment[es]=Resultado de análisis de Cachegrind/Callgring
 Comment[et]=Cachegrind/Callgrind profileerimistõmmis
+Comment[eu]=Cachegrind/Callgrind profil iraulketa
 Comment[fi]=Cachegrind/Callgrind profiililista
 Comment[fr]=Dépôt de profil Cachegrind / Callgrind
 Comment[hi]=केश-ग्रिंड/काल-ग्रिंड प्रोफ़ाइल डम्प
@@ -26,6 +27,7 @@ Comment[sr@Latn]=Cachegrind-ov/Callgrind-ov stovar profila
 Comment[sv]=Profileringsdump från Cachegrind/Callgrind
 Comment[ta]=இடைமாற்றகட்டம்/ அழைப்பு கட்டம் விவரக்குறி திணிப்பு
 Comment[tg]=Дампи профилкунии Cachegrind/Callgrind
+Comment[uk]=Звалювання профілювання Cachegrind/Callgrind
 Comment[xx]=xxCachegrind/Callgrind Profile Dumpxx
 Comment[zh_CN]=Cachegrind/Callgrind 配置文件转存
 DefaultApp=kcachegrind
