--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -17,7 +17,7 @@ GenericName[bs]=Profiler frontend
 GenericName[ca]=Interfície de Profiler
 GenericName[cs]=Rozhraní pro profilaci
 GenericName[cy]=Blaen-wyneb Proffilydd
-GenericName[da]=Forende for profiler
+GenericName[da]=Grænseflade til profilering
 GenericName[de]=Profiler Oberfläche
 GenericName[es]=Interfaz de Profiler
 GenericName[et]=Profileerimisrakendus
@@ -48,7 +48,7 @@ Comment=Visualization of Performance Profiling Data
 Comment[bs]=Vizualizacija podataka za profiliranje performansi
 Comment[ca]=Visualizació de dades de perfilat de rendiment
 Comment[cs]=Vizualizace profilovacích dat výkonu
-Comment[da]=Visualisering af ydelse-profildata
+Comment[da]=Visualisering af profileringsdata
 Comment[de]=Visualisierung von Daten des Laufzeitverhaltens eines Programmes
 Comment[en_GB]=Visualisation of Performance Profiling Data
 Comment[es]=Visualización de datos de análisis de rendimiento
