CVS_SILENT made messages (.desktop file)
svn path=/branches/KDE_3_4_BRANCH/kdesdk/kcachegrind/; revision=398279

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -11,7 +11,6 @@ Name=KCachegrind
 Name[hi]=के-केश-ग्रिंड
 Name[sv]=Kcachegrind
 Name[ta]=  இடைமாற்றகட்டம்
-Name[xx]=xxKCachegrindxx
 GenericName=Profiler Frontend
 GenericName[bs]=Profiler frontend
 GenericName[ca]=Interfície de Profiler
@@ -21,6 +20,7 @@ GenericName[da]=Grænseflade til profilering
 GenericName[de]=Profiler Oberfläche
 GenericName[es]=Interfaz de Profiler
 GenericName[et]=Profileerimisrakendus
+GenericName[eu]=Profilatzailearen interfazea
 GenericName[fi]=Profiloijan käyttöliittymä
 GenericName[fr]=Interface de profilage
 GenericName[hi]=प्रोफ़ाइलर फ्रन्टएण्ड
@@ -42,7 +42,6 @@ GenericName[sv]=Profileringsgränssnitt
 GenericName[ta]= விவரக்குறிப்பு முன்பகுதி
 GenericName[tg]=Интерфейс ба профилкунанда
 GenericName[uk]=Інтерфейс до Profiler
-GenericName[xx]=xxProfiler Frontendxx
 GenericName[zh_CN]=个性数据前端
 Comment=Visualization of Performance Profiling Data
 Comment[bs]=Vizualizacija podataka za profiliranje performansi
@@ -75,7 +74,6 @@ Comment[sv]=Åskådliggörande av profileringsdata för prestanda
 Comment[ta]= விவர தகவலை செயல்பாட்டு காட்சியாளிப்பு
 Comment[tg]=Утилита барои гузориши профили визуалӣ
 Comment[uk]=Візуалізація даних профілювання швидкодії
-Comment[xx]=xxVisualization of Performance Profiling Dataxx
 Comment[zh_CN]=性能个性数据的可视化表现
 X-DCOP-ServiceType=Multi
 Categories=Qt;KDE;Development;
