Get rid of unneeded actions. Search was moved to function profile. This fixes a bug with the "Search:" KWidgetAction widget, which is shown in the top left if not plugged into the toolbar (?).
svn path=/trunk/kdesdk/kcachegrind/; revision=400611

--- a/kcachegrind/Makefile.am
+++ b/kcachegrind/Makefile.am
@@ -6,7 +6,7 @@ kcachegrind_SOURCES = \
  partselectionbase.ui \
  configdlgbase.ui \
  loader.cpp cachegrindloader.cpp treemap.cpp pool.cpp \
- kwidgetaction.cpp main.cpp configuration.cpp \
+ main.cpp configuration.cpp \
  functionselection.cpp coverage.cpp partgraph.cpp \
  toplevel.cpp stackselection.cpp stackbrowser.cpp \
  subcost.cpp tracedata.cpp partselection.cpp configdlg.cpp \
