SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=430367

--- a/kcachegrind/x-kcachegrind.desktop
+++ b/kcachegrind/x-kcachegrind.desktop
@@ -22,7 +22,7 @@ Comment[pt]=Resultado da Análise do Cachegrind/Callgrind
 Comment[pt_BR]=Depósito de Perfil Cachegrind/Callgrind
 Comment[ru]=Дамп профилирования Cachegrind/Callgrind
 Comment[sk]=Výpis volaní Cachegrind/Callgrind
-Comment[sr]=Cachegrind-ов/Callgrind-ов стовар профила
+Comment[sr]=Cachegrind-ов/Callgrind-ов избачај профила
 Comment[sr@Latn]=Cachegrind-ov/Callgrind-ov stovar profila
 Comment[sv]=Profileringsdump från Cachegrind/Callgrind
 Comment[ta]=இடைமாற்றகட்டம்/ அழைப்பு கட்டம் விவரக்குறி திணிப்பு
