SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=434155

--- a/kcachegrind/x-kcachegrind.desktop
+++ b/kcachegrind/x-kcachegrind.desktop
@@ -23,7 +23,7 @@ Comment[pt_BR]=Depósito de Perfil Cachegrind/Callgrind
 Comment[ru]=Дамп профилирования Cachegrind/Callgrind
 Comment[sk]=Výpis volaní Cachegrind/Callgrind
 Comment[sr]=Cachegrind-ов/Callgrind-ов избачај профила
-Comment[sr@Latn]=Cachegrind-ov/Callgrind-ov stovar profila
+Comment[sr@Latn]=Cachegrind-ov/Callgrind-ov izbačaj profila
 Comment[sv]=Profileringsdump från Cachegrind/Callgrind
 Comment[ta]=இடைமாற்றகட்டம்/ அழைப்பு கட்டம் விவரக்குறி திணிப்பு
 Comment[tg]=Дампи профилкунии Cachegrind/Callgrind
