SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=435474

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -41,6 +41,7 @@ GenericName[sr@Latn]=Grafički interfejs za profajler
 GenericName[sv]=Profileringsgränssnitt
 GenericName[ta]= விவரக்குறிப்பு முன்பகுதி
 GenericName[tg]=Интерфейс ба профилкунанда
+GenericName[tr]=Profil Önyüzü
 GenericName[uk]=Інтерфейс до Profiler
 GenericName[xx]=xxProfiler Frontendxx
 GenericName[zh_CN]=个性数据前端
