SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/kcachegrind/; revision=456529

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -30,6 +30,7 @@ GenericName[it]=Interfaccia a profiler
 GenericName[ja]=プロファイラフロントエンド
 GenericName[nb]=Grensesnitt for fremvisningen
 GenericName[nl]=Profiler-hulpprogramma
+GenericName[pa]=ਪਰੋਫਾਇਲਰ ਮੁੱਖ ਭੂਮੀ
 GenericName[pl]=Interfejs do profilera
 GenericName[pt]=Interface de Profiler
 GenericName[pt_BR]=Interface para o Profiler
