SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/kcachegrind/; revision=464368

--- a/kcachegrind/x-kcachegrind.desktop
+++ b/kcachegrind/x-kcachegrind.desktop
@@ -6,6 +6,7 @@ Comment[cs]=Data profilace Cachegrind/Callgrind
 Comment[cy]=Tomen Proffil Cachegrind/Callgrind
 Comment[da]=Cachegrind/Callgrind profile-dump
 Comment[de]=Cachegrind/Callgrind Profil-Ausgabe
+Comment[el]=Αποτύπωση προφίλ Cachegrind/Callgrind
 Comment[es]=Resultado de análisis de Cachegrind/Callgring
 Comment[et]=Cachegrind/Callgrind profileerimistõmmis
 Comment[eu]=Cachegrind/Callgrind profil iraulketa
