--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -19,6 +19,7 @@ GenericName[cs]=Rozhraní pro profilaci
 GenericName[cy]=Blaen-wyneb Proffilydd
 GenericName[da]=Grænseflade til profilering
 GenericName[de]=Profiler Oberfläche
+GenericName[el]=Πρόγραμμα προφίλ
 GenericName[es]=Interfaz de Profiler
 GenericName[et]=Profileerimisrakendus
 GenericName[fi]=Profiloijan käyttöliittymä
@@ -52,6 +53,7 @@ Comment[ca]=Visualizació de dades de perfilat de rendiment
 Comment[cs]=Vizualizace profilovacích dat výkonu
 Comment[da]=Visualisering af profileringsdata
 Comment[de]=Visualisierung von Daten des Laufzeitverhaltens eines Programmes
+Comment[el]=Αναπαράσταση δεδομένων ταχύτητας προφίλ
 Comment[en_GB]=Visualisation of Performance Profiling Data
 Comment[es]=Visualización de datos de análisis de rendimiento
 Comment[et]=Jõudluse profileerimise andmete visualiseerimise vahend
