SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.4/kdesdk/kcachegrind/; revision=464421

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -18,6 +18,7 @@ GenericName[cs]=Rozhraní pro profilaci
 GenericName[cy]=Blaen-wyneb Proffilydd
 GenericName[da]=Grænseflade til profilering
 GenericName[de]=Profiler Oberfläche
+GenericName[el]=Πρόγραμμα προφίλ
 GenericName[es]=Interfaz de Profiler
 GenericName[et]=Profileerimisrakendus
 GenericName[eu]=Profilatzailearen interfazea
@@ -49,6 +50,7 @@ Comment[ca]=Visualizació de dades de perfilat de rendiment
 Comment[cs]=Vizualizace profilovacích dat výkonu
 Comment[da]=Visualisering af profileringsdata
 Comment[de]=Visualisierung von Daten des Laufzeitverhaltens eines Programmes
+Comment[el]=Αναπαράσταση δεδομένων ταχύτητας προφίλ
 Comment[en_GB]=Visualisation of Performance Profiling Data
 Comment[es]=Visualización de datos de análisis de rendimiento
 Comment[et]=Jõudluse profileerimise andmete visualiseerimise vahend
