SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/kcachegrind/; revision=471562

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -22,6 +22,7 @@ GenericName[de]=Profiler Oberfläche
 GenericName[el]=Πρόγραμμα προφίλ
 GenericName[es]=Interfaz de Profiler
 GenericName[et]=Profileerimisrakendus
+GenericName[eu]=Profilatzailearen interfazea
 GenericName[fi]=Profiloijan käyttöliittymä
 GenericName[fr]=Interface de profilage
 GenericName[hi]=प्रोफ़ाइलर फ्रन्टएण्ड
