- removed not supported %m - removed %i if not needed (app name == icon name)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=492072

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -2,7 +2,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Type=Application
-Exec=kcachegrind -caption "%c" %i %m %u
+Exec=kcachegrind -caption "%c" %u
 MimeType=application/x-kcachegrind;
 Icon=kcachegrind
 DocPath=kcachegrind/index.html
