SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=495179

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -8,75 +8,10 @@ Icon=kcachegrind
 DocPath=kcachegrind/index.html
 Terminal=false
 Name=KCachegrind
-Name[hi]=के-केश-ग्रिंड
-Name[sv]=Kcachegrind
-Name[ta]=  இடைமாற்றகட்டம்
-Name[xx]=xxKCachegrindxx
+Name[x-test]=xxKCachegrindxx
 GenericName=Profiler Frontend
-GenericName[bs]=Profiler frontend
-GenericName[ca]=Interfície de Profiler
-GenericName[cs]=Rozhraní pro profilaci
-GenericName[cy]=Blaen-wyneb Proffilydd
-GenericName[da]=Grænseflade til profilering
-GenericName[de]=Profiler Oberfläche
-GenericName[es]=Interfaz de Profiler
-GenericName[et]=Profileerimisrakendus
-GenericName[fi]=Profiloijan käyttöliittymä
-GenericName[fr]=Interface de profilage
-GenericName[hi]=प्रोफ़ाइलर फ्रन्टएण्ड
-GenericName[hu]=Profilozó
-GenericName[is]=Myndrænt viðmót á afkastakönnuð
-GenericName[it]=Interfaccia a profiler
-GenericName[ja]=プロファイラフロントエンド
-GenericName[nb]=Grensesnitt for fremvisningen
-GenericName[nl]=Profiler-hulpprogramma
-GenericName[pl]=Interfejs do profilera
-GenericName[pt]=Interface de Profiler
-GenericName[pt_BR]=Interface para o Profiler
-GenericName[ru]=Интерфейс к профилировщику
-GenericName[sk]=Rozhranie pre profiler
-GenericName[sl]=Vmesnik profilnika
-GenericName[sr]=Графички интерфејс за профајлер
-GenericName[sr@Latn]=Grafički interfejs za profajler
-GenericName[sv]=Profileringsgränssnitt
-GenericName[ta]= விவரக்குறிப்பு முன்பகுதி
-GenericName[tg]=Интерфейс ба профилкунанда
-GenericName[tr]=Profil Önyüzü
-GenericName[uk]=Інтерфейс до Profiler
-GenericName[xx]=xxProfiler Frontendxx
-GenericName[zh_CN]=个性数据前端
+GenericName[x-test]=xxProfiler Frontendxx
 Comment=Visualization of Performance Profiling Data
-Comment[bs]=Vizualizacija podataka za profiliranje performansi
-Comment[ca]=Visualizació de dades de perfilat de rendiment
-Comment[cs]=Vizualizace profilovacích dat výkonu
-Comment[da]=Visualisering af profileringsdata
-Comment[de]=Visualisierung von Daten des Laufzeitverhaltens eines Programmes
-Comment[en_GB]=Visualisation of Performance Profiling Data
-Comment[es]=Visualización de datos de análisis de rendimiento
-Comment[et]=Jõudluse profileerimise andmete visualiseerimise vahend
-Comment[eu]=Errendimendu profil datuen bistaratzea
-Comment[fi]=Visualisointi tehoprofiloinnin tiedoista
-Comment[fr]=Visualisation des données de performance de profilage
-Comment[hi]=परफार्मेस प्रोफाइलिंग डाटा का विजुअलाइज़ेशन
-Comment[hu]=Teljesítményprofil-adatok megjelenítése
-Comment[is]=Sjónræn framsetning gagna úr afkastakönnun
-Comment[it]=Visualizzazione dei dati di profiling delle prestazioni
-Comment[ja]=パフォーマンスプロファイルデータを視覚化
-Comment[nb]=Vis informasjon om ytelse.
-Comment[nl]=Visualisatie van Performance Profiling Data
-Comment[pl]=Wizualizacja danych profilowania wydajności
-Comment[pt]=Visualização dos Dados de Análise de Performance
-Comment[pt_BR]=Visualização de Dados de Perfil de Desempenho
-Comment[ru]=Утилита для визуального профилирования приложений
-Comment[sk]=Vizualizácia dát o výkone
-Comment[sl]=Vizualizacija podatkov profilnih zmogljivosti
-Comment[sr]=Визуелизација података о профилисању перформанси
-Comment[sr@Latn]=Vizuelizacija podataka o profilisanju performansi
-Comment[sv]=Åskådliggörande av profileringsdata för prestanda
-Comment[ta]= விவர தகவலை செயல்பாட்டு காட்சியாளிப்பு
-Comment[tg]=Утилита барои гузориши профили визуалӣ
-Comment[uk]=Візуалізація даних профілювання швидкодії
-Comment[xx]=xxVisualization of Performance Profiling Dataxx
-Comment[zh_CN]=性能个性数据的可视化表现
+Comment[x-test]=xxVisualization of Performance Profiling Dataxx
 X-DCOP-ServiceType=Multi
 Categories=Qt;KDE;Development;
