--- a/kcachegrind/x-kcachegrind.desktop
+++ b/kcachegrind/x-kcachegrind.desktop
@@ -1,35 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Comment=Cachegrind/Callgrind Profile Dump
-Comment[ca]=Resultat de l'anàlisis de Cachegrind/Callgring
-Comment[cs]=Data profilace Cachegrind/Callgrind
-Comment[cy]=Tomen Proffil Cachegrind/Callgrind
-Comment[da]=Cachegrind/Callgrind profile-dump
-Comment[de]=Cachegrind/Callgrind Profil-Ausgabe
-Comment[es]=Resultado de análisis de Cachegrind/Callgring
-Comment[et]=Cachegrind/Callgrind profileerimistõmmis
-Comment[eu]=Cachegrind/Callgrind profil iraulketa
-Comment[fi]=Cachegrind/Callgrind profiililista
-Comment[fr]=Dépôt de profil Cachegrind / Callgrind
-Comment[hi]=केश-ग्रिंड/काल-ग्रिंड प्रोफ़ाइल डम्प
-Comment[hu]=Cachegrind/Callgrind teljesítményprofil-fájl
-Comment[is]=Niðurstaða afkastakönnunar á Cachegrind/Callgrind
-Comment[it]=Dump del profilo di Cachegrind/Callgrind
-Comment[ja]=Callgrind/Callgrind プロファイルダンプ
-Comment[nl]=Cachegrind/Callgrind Profieldump
-Comment[pl]=Zrzut profilowania Cachegrind/Callgrind
-Comment[pt]=Resultado da Análise do Cachegrind/Callgrind
-Comment[pt_BR]=Depósito de Perfil Cachegrind/Callgrind
-Comment[ru]=Дамп профилирования Cachegrind/Callgrind
-Comment[sk]=Výpis volaní Cachegrind/Callgrind
-Comment[sr]=Cachegrind-ов/Callgrind-ов избачај профила
-Comment[sr@Latn]=Cachegrind-ov/Callgrind-ov izbačaj profila
-Comment[sv]=Profileringsdump från Cachegrind/Callgrind
-Comment[ta]=இடைமாற்றகட்டம்/ அழைப்பு கட்டம் விவரக்குறி திணிப்பு
-Comment[tg]=Дампи профилкунии Cachegrind/Callgrind
-Comment[uk]=Звалювання профілювання Cachegrind/Callgrind
-Comment[xx]=xxCachegrind/Callgrind Profile Dumpxx
-Comment[zh_CN]=Cachegrind/Callgrind 配置文件转存
+Comment[x-test]=xxCachegrind/Callgrind Profile Dumpxx
 DefaultApp=kcachegrind
 Icon=kcachegrind
 Type=MimeType
