SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/kcachegrind/; revision=498263

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -30,7 +30,7 @@ GenericName[is]=Myndrænt viðmót á afkastakönnuð
 GenericName[it]=Interfaccia a profiler
 GenericName[ja]=プロファイラフロントエンド
 GenericName[lt]=Profiliuoklio naudotojo sąsaja
-GenericName[nb]=Grensesnitt for fremvisningen
+GenericName[nb]=Grensesnitt for profilvisning
 GenericName[nl]=Profiler-hulpprogramma
 GenericName[pa]=ਪਰੋਫਾਇਲਰ ਮੁੱਖ ਭੂਮੀ
 GenericName[pl]=Interfejs do profilera
