SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=511223

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -10,8 +10,10 @@ Terminal=false
 Name=KCachegrind
 Name[x-test]=xxKCachegrindxx
 GenericName=Profiler Frontend
+GenericName[fr]=Interface de profilage
 GenericName[x-test]=xxProfiler Frontendxx
 Comment=Visualization of Performance Profiling Data
+Comment[fr]=Visualisation des données de performance de profilage
 Comment[x-test]=xxVisualization of Performance Profiling Dataxx
 X-DCOP-ServiceType=Multi
 Categories=Qt;KDE;Development;
