SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdesdk/kcachegrind/; revision=521290

--- a/kcachegrind/kcachegrind.desktop
+++ b/kcachegrind/kcachegrind.desktop
@@ -24,6 +24,7 @@ GenericName[et]=Profileerimisrakendus
 GenericName[eu]=Profilatzailearen interfazea
 GenericName[fi]=Profiloijan käyttöliittymä
 GenericName[fr]=Interface de profilage
+GenericName[ga]=Comhéadan ar Phróifíleoir
 GenericName[hi]=प्रोफ़ाइलर फ्रन्टएण्ड
 GenericName[hu]=Profilozó
 GenericName[is]=Myndrænt viðmót á afkastakönnuð
