Fix some cmake variable
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=521503

--- a/kcachegrind/CMakeLists.txt
+++ b/kcachegrind/CMakeLists.txt
@@ -56,7 +56,7 @@ kde4_add_ui3_files(kcachegrind_SRCS
 
 kde4_add_executable(kcachegrind ${kcachegrind_SRCS})
 
-target_link_libraries(kcachegrind  ${KDE4_KIO_LIBRARIES} )
+target_link_libraries(kcachegrind  ${KDE4_KIO_LIBS} )
 
 install_targets(/bin kcachegrind )
 
