Install as binary
svn path=/trunk/KDE/kdesdk/kcachegrind/; revision=541150

--- a/converters/CMakeLists.txt
+++ b/converters/CMakeLists.txt
@@ -1,9 +1,6 @@
 
-
-
-
 ########### install files ###############
-install_files( /bin FILES hotshot2calltree op2calltree pprof2calltree dprof2calltree memprof2calltree )
+install( PROGRAMS hotshot2calltree op2calltree pprof2calltree dprof2calltree memprof2calltree DESTINATION bin )
 
 
 
